--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bevy = "0.11.0"
 bevy_panorbit_camera = "0.7.0"
+bitflags = "2.3.3"
 noise = "0.8.2"
 
 # Enable a small amount of optimization in debug mode
